--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
        
       table,th,td{
-        border: 1px solid black;
+        border: 1px solid blue;
         border-collapse: collapse   ;
           }
           h1{font-size: 20px; color:#333333;} 
